--- a/Resources/views/Login/login.html.twig
+++ b/Resources/views/Login/login.html.twig
@@ -83,21 +83,23 @@
     <body>
         <div class="container">
             <form class="form-signin" action="{{ path('login_check') }}" method="post">
-                <h2 class="form-signin-heading">Futura</h2>
+                <h2 class="form-signin-heading">{% block header -%}Company{%- endblock%}</h2>
                 {% if error %}
                 <div class="alert alert-danger">
                     {{ error.messageKey|trans(error.messageData) }}
                 </div>
                 {% endif %}
-                <div class="form-group username">
-                    <label for="username" class="sr-only">Login</label>
-                    <input id="username" type="text" class="form-control" placeholder="Login" name="_username" autofocus value="{{ last_username }}">
+                <div class="inputs">
+                    <div class="form-group username">
+                        <label for="username" class="sr-only">Login</label>
+                        <input id="username" type="text" class="form-control" placeholder="Login" name="_username" autofocus value="{{ last_username }}">
+                    </div>
+                    <div class="form-group password">
+                        <label for="password" class="sr-only">Senha</label>
+                        <input id="password" type="password" class="form-control" placeholder="Senha" name="_password">
+                    </div>
+                    <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
                 </div>
-                <div class="form-group password">
-                    <label for="password" class="sr-only">Senha</label>
-                    <input id="password" type="password" class="form-control" placeholder="Senha" name="_password">
-                </div>
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
             </form>
         </div>
                 
